test/arrays/compilerErrors/array-generic-type.good
array-generic-type.chpl:4: syntax error: near ']'
array-generic-type.chpl:7: syntax error: near ']'
